# gpt

./: Cargo.toml  flake.nix  readme.md
src/: main.rs
