[package]
name = "gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
json = "0.12.4"
reqwest = { version = "=0.12.0" }
reqwest-eventsource = "0.6.0"
serde = "1.0.0"
serde_json = "1.0.0"
tokio = { version = "1.32.0", features = ["full"] }
